# hex-game-project

./: CMakeLists.txt  README.md  main.cpp
assets/components/: hexagonos.txt  imagenes.txt  labels.txt  seleccionables.txt
include/: AI.h  Board.h  Game.h  HexagonFactory.h  Menu.h  Options.h  RectangleFactory.h  Render.h  Word.h  definitions.h  figure.h  hexagon.h  rectangle.h
src/: AI.cpp  Board.cpp  Game.cpp  Menu.cpp  Options.cpp  Word.cpp  figure.cpp  hexagon.cpp  rectangle.cpp
